<resources>
    <string name="app_name">PAM Praktikum 8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">Image description for accessibility</string>
    <string name="pemandangan">pemandangan</string>
    <string name="kitaalam_id">kitaalam.id</string>
    <string name="love">love</string>
    <string name="bubble">bubble</string>
    <string name="send">send</string>
    <string name="bookmark">bookmark</string>
    <string name="dots">dots</string>
    <string name="_10_894_suka">10.894 suka</string>
    <string name="cinta">cinta</string>
    <string name="chat">chat</string>
    <string name="tambah">tambah</string>
    <string name="alam_yang_begitu_indah_bukan">Alam yang begitu indah bukan?</string>
    <string name="selengkapnya">...selengkapnya</string>
    <string name="lihat_semua_514_komentar">Lihat semua 514 komentar</string>
    <string name="tambahkan_komentar">Tambahkan Komentar...</string>
    <string name="_9_jam_yang_lalu">9 jam yang lalu</string>
    <string name="tambahkan_ke_favorit">Tambahkan ke favorit</string>
    <string name="berhenti_mengikuti">Berhenti mengikuti</string>
    <string name="mengapa_Anda_melihat_postingan_ini" />
    <string name="sembunyikan" />
    <string name="Tentang_akun_ini" />
    <string name="Laporkan" />
    <string name="add">Add</string>
</resources>